--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -432,7 +432,6 @@
                 </LinearLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-             <!--pagina-->
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/pag_3"
@@ -503,6 +502,7 @@
                     app:layout_constraintTop_toBottomOf="@id/user_menu_spinner_users"
                     app:layout_constraintStart_toEndOf="@id/user_menu_button_new"
                     android:layout_marginEnd="50dp"
+                    app:layout_constraintBottom_toTopOf="@id/user_menu_button_cancel"
                     android:layout_marginTop="130dp"/>
 
                 <Button
@@ -541,7 +541,9 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/user_menu_button_select_user"
                     android:layout_marginEnd="50dp"
-                    app:layout_constraintTop_toBottomOf="@id/user_menu_spinner_users" />
+                    app:layout_constraintTop_toBottomOf="@id/user_menu_spinner_users"
+                    app:layout_constraintBottom_toTopOf="@id/user_menu_button_delete"
+                    />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -715,7 +717,7 @@
                     app:layout_constraintWidth_percent="0.3" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
+             <!--pagina-->
             <ScrollView
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
@@ -839,13 +841,30 @@
                         android:layout_marginEnd="8dp"
                         android:layout_marginStart="16dp" />
 
+                    <TextView
+                        android:id="@+id/new_contest_text_view_exch"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="Exchange or # to Serial"
+                        android:textStyle="bold"
+                        android:textSize="14sp"
+                        android:textColor="#222222"
+                        android:paddingTop="1dp"
+                        android:paddingBottom="1dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/spinner_power"
+                        android:layout_marginStart="18dp"
+                        app:layout_constraintTop_toBottomOf="@id/spinner_time_category"
+                        android:layout_marginTop="4dp" />
+
+
                     <EditText
                         android:id="@+id/editText_send_exchange"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:hint="Exchange or # to Serial"
-                        app:layout_constraintTop_toBottomOf="@id/spinner_time_category"
+                        android:layout_marginTop="3dp"
+                        android:hint=""
+                        app:layout_constraintTop_toBottomOf="@id/new_contest_text_view_exch"
                         app:layout_constraintStart_toEndOf="@id/spinner_mode"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:layout_marginStart="8dp"
@@ -864,14 +883,30 @@
                         android:layout_marginEnd="8dp"
                         android:layout_marginStart="16dp" />
 
+                    <TextView
+                        android:id="@+id/new_contest_text_operators"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="Operators Callsings"
+                        android:textStyle="bold"
+                        android:textSize="14sp"
+                        android:textColor="#222222"
+                        android:paddingTop="1dp"
+                        android:paddingBottom="1dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="@id/new_contest_text_view_exch"
+                        android:layout_marginStart="0dp"
+                        app:layout_constraintTop_toBottomOf="@id/editText_send_exchange"
+                        android:layout_marginTop="4dp" />
+
                     <EditText
                         android:id="@+id/editText_operators"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:hint="Operators Callsigns"
+                        android:layout_marginTop="3dp"
+                        android:hint=""
                         android:inputType="text"
-                        app:layout_constraintTop_toBottomOf="@id/editText_send_exchange"
+                        app:layout_constraintTop_toBottomOf="@id/new_contest_text_operators"
                         app:layout_constraintStart_toEndOf="@id/spinner_overlay"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:imeOptions="flagNoExtractUi|actionDone"
