--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,7 +92,7 @@
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-            <!--pagina-->
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/pag_2"
                 android:layout_width="match_parent"
@@ -432,7 +432,7 @@
                 </LinearLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
+            <!--pagina-->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/pag_3"
                 android:layout_width="match_parent"
@@ -455,97 +455,129 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <Spinner
-                    android:id="@+id/user_menu_spinner_users"
+                <ScrollView
+                    android:id="@+id/user_menu_scroll"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="32dp"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_height="0dp"
+                    android:fillViewport="true"
+                    app:layout_constraintTop_toBottomOf="@id/user_menu_textview_title"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/user_menu_textview_title" />
-
-                <Button
-                    android:id="@+id/user_menu_button_cancel"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/rouded_button"
-                    android:minHeight="0dp"
-                    android:padding="10dp"
-                    android:paddingTop="6dp"
-                    android:paddingBottom="6dp"
-                    android:text="Cancel"
-                    android:textColor="#FFFFFF"
-                    android:textSize="14sp"
-                    app:layout_constraintStart_toStartOf="@id/user_menu_button_select_user"
-                    app:layout_constraintTop_toBottomOf="@id/user_menu_button_select_user"
-                    android:layout_marginTop="24dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginBottom="80dp"
-                    app:layout_constraintEnd_toEndOf="@id/user_menu_button_select_user"
-                    />
-
-                <Button
-                    android:id="@+id/user_menu_button_select_user"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/rouded_button"
-                    android:minHeight="0dp"
-                    android:text="Select"
-                    android:textColor="#FFFFFF"
-                    android:padding="10dp"
-                    android:paddingTop="6dp"
-                    android:paddingBottom="6dp"
-                    android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/user_menu_spinner_users"
-                    app:layout_constraintStart_toEndOf="@id/user_menu_button_new"
-                    android:layout_marginEnd="50dp"
-                    app:layout_constraintBottom_toTopOf="@id/user_menu_button_cancel"
-                    android:layout_marginTop="130dp"/>
+                    app:layout_constraintBottom_toBottomOf="parent">
 
-                <Button
-                    android:id="@+id/user_menu_button_delete"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:background="@drawable/rouded_button"
-                    android:minHeight="0dp"
-                    android:padding="10dp"
-                    android:paddingTop="6dp"
-                    android:paddingBottom="6dp"
-                    android:text="Delete"
-                    android:textColor="#FFFFFF"
-                    android:textSize="14sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@id/user_menu_button_new"
-                    app:layout_constraintStart_toStartOf="@id/user_menu_button_new"
-                    app:layout_constraintTop_toBottomOf="@id/user_menu_button_new"
-                    android:layout_marginBottom="80dp"/>
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingStart="32dp"
+                        android:paddingEnd="32dp">
 
-                <Button
-                    android:id="@+id/user_menu_button_new"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="50dp"
-                    android:layout_marginTop="130dp"
-                    android:background="@drawable/rouded_button"
-                    android:minHeight="0dp"
-                    android:padding="10dp"
-                    android:paddingTop="6dp"
-                    android:paddingBottom="6dp"
-                    android:text="New"
-                    android:textColor="#FFFFFF"
-                    android:textSize="14sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/user_menu_button_select_user"
-                    android:layout_marginEnd="50dp"
-                    app:layout_constraintTop_toBottomOf="@id/user_menu_spinner_users"
-                    app:layout_constraintBottom_toTopOf="@id/user_menu_button_delete"
-                    />
+                        <Spinner
+                            android:id="@+id/user_menu_spinner_users"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="24dp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <Button
+                            android:id="@+id/user_menu_button_edit"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="60dp"
+                            android:layout_marginTop="160dp"
+                            android:layout_marginEnd="50dp"
+                            android:background="@drawable/rouded_button"
+                            android:minHeight="0dp"
+                            android:padding="10dp"
+                            android:paddingTop="6dp"
+                            android:paddingBottom="0dp"
+                            android:text="EDIT"
+                            android:textColor="#FFFFFF"
+                            android:textSize="14sp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toStartOf="@id/user_menu_button_select_user"
+                            app:layout_constraintTop_toBottomOf="@id/user_menu_spinner_users"
+                            app:layout_constraintBottom_toTopOf="@id/user_menu_button_delete" />
+
+                        <Button
+                            android:id="@+id/user_menu_button_select_user"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="50dp"
+                            android:layout_marginTop="160dp"
+                            android:background="@drawable/rouded_button"
+                            android:minHeight="0dp"
+                            android:padding="10dp"
+                            android:paddingTop="6dp"
+                            android:paddingBottom="6dp"
+                            android:text="Select"
+                            android:textColor="#FFFFFF"
+                            android:textSize="14sp"
+                            app:layout_constraintStart_toEndOf="@id/user_menu_button_edit"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/user_menu_spinner_users"
+                            app:layout_constraintBottom_toTopOf="@id/user_menu_button_cancel" />
+
+                        <Button
+                            android:id="@+id/user_menu_button_new"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="150dp"
+                            android:layout_marginTop="90dp"
+                            android:layout_marginEnd="150dp"
+                            android:background="@drawable/rouded_button"
+                            android:minHeight="0dp"
+                            android:padding="10dp"
+                            android:paddingTop="6dp"
+                            android:paddingBottom="3dp"
+                            android:text="NEW"
+                            android:textColor="#FFFFFF"
+                            android:textSize="14sp"
+                            app:layout_constraintStart_toStartOf="@id/user_menu_button_edit"
+                            app:layout_constraintEnd_toEndOf="@id/user_menu_button_select_user"
+                            app:layout_constraintTop_toBottomOf="@id/user_menu_spinner_users"
+                            app:layout_constraintBottom_toTopOf="@id/user_menu_button_edit" />
+
+                        <Button
+                            android:id="@+id/user_menu_button_delete"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:background="@drawable/rouded_button"
+                            android:minHeight="0dp"
+                            android:padding="10dp"
+                            android:paddingTop="6dp"
+                            android:paddingBottom="6dp"
+                            android:text="Delete"
+                            android:textColor="#FFFFFF"
+                            android:textSize="14sp"
+                            app:layout_constraintStart_toStartOf="@id/user_menu_button_edit"
+                            app:layout_constraintEnd_toEndOf="@id/user_menu_button_edit"
+                            app:layout_constraintTop_toBottomOf="@id/user_menu_button_edit" />
+
+                        <Button
+                            android:id="@+id/user_menu_button_cancel"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:background="@drawable/rouded_button"
+                            android:minHeight="0dp"
+                            android:padding="10dp"
+                            android:paddingTop="6dp"
+                            android:paddingBottom="6dp"
+                            android:text="Cancel"
+                            android:textColor="#FFFFFF"
+                            android:textSize="14sp"
+                            app:layout_constraintStart_toStartOf="@id/user_menu_button_select_user"
+                            app:layout_constraintEnd_toEndOf="@id/user_menu_button_select_user"
+                            app:layout_constraintTop_toBottomOf="@id/user_menu_button_select_user" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </ScrollView>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/pag_4"
