Mais modificações para implantação da função para suportar outros rádios

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/rouded_button"
-                    android:text="New User"
+                    android:text="NEW USER"
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
                     android:textSize="20sp"
@@ -78,7 +78,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/rouded_button"
-                    android:text="Load User"
+                    android:text="LOAD USER"
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
                     android:textSize="20sp"
@@ -412,7 +412,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@drawable/rouded_button"
-                        android:text="Save User"
+                        android:text="SAVE USER"
                         android:textColor="#FFFFFF"
                         android:textSize="14sp" />
 
@@ -668,7 +668,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:minHeight="48dp"
-                    android:text="User Menu"
+                    android:text="USER MENU"
                     android:textColor="#FFFFFF"
                     android:textSize="14sp"
                     android:layout_marginTop="24dp"
@@ -677,15 +677,15 @@
                     android:background="@drawable/rouded_button"
                     app:layout_constraintTop_toBottomOf="@id/user_indicator"
                     app:layout_constraintStart_toEndOf="@id/button_contests"
-                    app:layout_constraintEnd_toStartOf="@id/button_Edit_User"
+                    app:layout_constraintEnd_toStartOf="@id/main_menu_button_radio"
                     app:layout_constraintWidth_percent="0.3" />
 
                 <Button
-                    android:id="@+id/button_Edit_User"
+                    android:id="@+id/main_menu_button_radio"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:minHeight="48dp"
-                    android:text="Edit User"
+                    android:text="RADIO"
                     android:textColor="#FFFFFF"
                     android:textSize="14sp"
                     android:layout_marginTop="24dp"
@@ -702,7 +702,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:minHeight="48dp"
-                    android:text="Logger"
+                    android:text="LOGGER"
                     android:textColor="#FFFFFF"
                     android:textSize="14sp"
                     android:layout_marginTop="24dp"
@@ -719,7 +719,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:minHeight="48dp"
-                    android:text="Bluetooth"
+                    android:text="BLUETOOTH"
                     android:textColor="#FFFFFF"
                     android:textSize="14sp"
                     android:layout_marginTop="24dp"
@@ -736,7 +736,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:minHeight="48dp"
-                    android:text="About"
+                    android:text="ABOUT"
                     android:textColor="#FFFFFF"
                     android:textSize="14sp"
                     android:layout_marginTop="24dp"
