--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -432,7 +432,7 @@
                 </LinearLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-            <!--pagina-->
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/pag_3"
                 android:layout_width="match_parent"
@@ -685,7 +685,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:minHeight="48dp"
-                    android:text="RADIO"
+                    android:text="none"
                     android:textColor="#FFFFFF"
                     android:textSize="14sp"
                     android:layout_marginTop="24dp"
@@ -1824,6 +1824,96 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </ScrollView>
+            <!--pagina-->
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/pag_10"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#CCC2C2">
+
+                <TextView
+                    android:id="@+id/radio_textview_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginEnd="32dp"
+                    android:background="@drawable/rouded_button"
+                    android:gravity="center"
+                    android:text="RADIO OPTIONS"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ScrollView
+                    android:id="@+id/radio_scroll"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:fillViewport="true"
+                    app:layout_constraintTop_toBottomOf="@+id/radio_textview_title"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingStart="32dp"
+                        android:paddingEnd="32dp">
+
+                        <Spinner
+                            android:id="@+id/radio_spinner_radios"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="24dp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <Button
+                            android:id="@+id/radio_button_select"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/rouded_button"
+                            android:padding="10dp"
+                            android:paddingTop="6dp"
+                            android:paddingBottom="6dp"
+                            android:text="SELECT"
+                            android:textColor="#FFFFFF"
+                            android:textSize="14sp"
+                            app:layout_constraintTop_toTopOf="@id/radio_spinner_radios"
+                            android:layout_marginTop="150dp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            android:layout_marginStart="30dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:layout_marginBottom="30dp"
+                            />
+
+                        <Button
+                            android:id="@+id/radio_button_cancel"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/rouded_button"
+                            android:padding="10dp"
+                            android:paddingTop="6dp"
+                            android:paddingBottom="6dp"
+                            android:text="CANCEL"
+                            android:textColor="#FFFFFF"
+                            android:textSize="14sp"
+                            app:layout_constraintTop_toTopOf="@id/radio_spinner_radios"
+                            android:layout_marginTop="150dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            android:layout_marginEnd="30dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:layout_marginBottom="30dp"
+                             />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </ScrollView>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </ViewFlipper>
     </androidx.constraintlayout.widget.ConstraintLayout>
