--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -900,8 +900,8 @@
                         app:layout_constraintStart_toEndOf="@id/spinner_mode"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:layout_marginStart="8dp"
-                        android:imeOptions="flagNoExtractUi"
-                        android:nextFocusDown="@+id/editText_operators"
+                        android:inputType="text|textCapCharacters|textNoSuggestions"
+                        android:imeOptions="flagNoExtractUi|actionNext"
                         android:layout_marginEnd="16dp"/>
 
                     <Spinner
@@ -937,11 +937,11 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="3dp"
                         android:hint=""
-                        android:inputType="text"
                         app:layout_constraintTop_toBottomOf="@id/new_contest_text_operators"
                         app:layout_constraintStart_toEndOf="@id/spinner_overlay"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:imeOptions="flagNoExtractUi|actionDone"
+                        android:inputType="text|textCapCharacters|textNoSuggestions"
                         android:layout_marginStart="8dp"
                         android:layout_marginEnd="16dp"/>
 
