Mais correções na exportação do cabrillo

--- a/app/src/main/res/values/new_contest_config.xml
+++ b/app/src/main/res/values/new_contest_config.xml
@@ -36,7 +36,7 @@
         <item>SSB</item>
         <item>RTTY</item>
         <item>PSK</item>
-        <item>SSB+CW</item>
+        <item>MIXED</item>
         <item>DIGITAL</item>
         <item>SSB+CW+DIGITAL</item>
         <item>FM</item>
